[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "testclutch"
description = "System to track and analyze regression test runs from CI services"
version = "0.1dev"
readme = "README.md"
authors = [{name = "Dan Fandrich", email = "dan@telarity.com"}]
license = {text = "AGPLv3+"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
# These version dependencies are conservative and reflect versions that have
# actually been tested
requires-python = ">=3.9, <3.14"
dependencies = [
    "requests >= 2.25.1, <= 2.32.6",
    "zstd >= 1.4.5.1, <= 1.5.7.2",
]

# These version dependencies are more broad as they are not required dependencies
[project.optional-dependencies]
test = [
    "pytest >= 6, < 10"
]
dev = [
    "flake8 >= 5, < 8",
    "flake8-assertive",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-classmethod-staticmethod",
    "flake8-comprehensions",
    "flake8-datetimez",
    "flake8-deprecated",
    "flake8-docstrings",
    "flake8-get-chaining",
    "flake8-import-order",
    "flake8-mutable",
    "flake8-no-pep420",
    "flake8-noqa",
    "flake8-picky-parentheses",
    "flake8-pie",
    #"flake8-plus",  # This isn't compatible with python 3.9
    "flake8-pyproject",
    "flake8-quotes",
    "flake8-raise",
    "flake8-requirements",
    "flake8-return",
    "flake8-sfs",
    "flake8-simplify",
    "flake8-super",
    "flake8-warnings",
    "flake8-wot",
    "pytype >= 2023.9.19"
]

[project.urls]
Homepage = "https://github.com/dfandrich/testclutch"

[project.scripts]
tcanalysissum = "testclutch.cli.analysissum:main"
tcanalyzepr = "testclutch.cli.analyzepr:main"
tcaugmentcurldaily = "testclutch.cli.augmentcurldaily:main"
tcaugmentgithash = "testclutch.cli.augmentgithash:main"
tcdbutil = "testclutch.cli.dbutil:main"
tcfindtestruns = "testclutch.cli.findtestruns:main"
tcgitcommitinfo = "testclutch.cli.gitcommitinfo:main"
tcingestlog = "testclutch.cli.ingestlog:main"
tclogparse = "testclutch.logparser.logparse:main"
tcmetadatastats = "testclutch.cli.metadatastats:main"
tcquerytests = "testclutch.cli.querytests:main"

[tool.setuptools]
license-files = ["COPYING"]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
include = [
    "testclutch",
    "testclutch.cli",
    "testclutch.augment",
    "testclutch.ingest",
    "testclutch.logparser"
]

# flake8-pyproject must be installed for flake8 to use these settings
[tool.flake8]
ignore = ["W503", "E741", "E501", "D102", "D103", "D107", "B001", "IFS001", "NQA102", "PAR101",
          "PAR103", "PIE803", "PLU002", "SFS301", "SIM115", "SIM904"]
max-line-length = 100
max-complexity = 25
docstring-convention = "google"
blanks-before-imports = 1
